--- a/front-body-blast/src/app/styles/base.scss
+++ b/front-body-blast/src/app/styles/base.scss
@@ -1,9 +1,9 @@
 :root {
   font-size: 16px;
 
-  @media screen and (max-width: 450px) {
-    font-size: 12px;
-  }
+  // @media screen and (max-width: 450px) {
+  //   font-size: 12px;
+  // }
 }
 
 body {
