--- a/front-body-blast/src/app/styles/fonts.scss
+++ b/front-body-blast/src/app/styles/fonts.scss
@@ -5,19 +5,19 @@
 }
 
 h1 {
-  --uno: text-lg font-800;
+  --uno: text-lg font-800 tracking-normal;
 }
 
 h2 {
-  --uno: text-md font-800;
+  --uno: text-md font-800 tracking-normal;
 }
 
 p {
-  --uno: text-base font-400;
+  --uno: text-base font-400 tracking-normal;
 }
 
 span {
-  --uno: text-sm font-400;
+  --uno: text-sm font-400 tracking-normal;
 }
 
 a {
