--- a/front-body-blast/src/app/styles/quasar.defaults.scss
+++ b/front-body-blast/src/app/styles/quasar.defaults.scss
@@ -1,5 +1,13 @@
 :root {
   --q-bg: theme('colors.bg');
   --q-primary: theme('colors.primary');
+  --q-primary50: theme('colors.primary50');
   --q-secondary: theme('colors.secondary');
+}
+
+.text-primary50 {
+  color: var(--q-primary50) !important;
+}
+.bg-primary50 {
+  background-color: var(--q-primary50) !important;
 }
